[project]
name = "fastapi-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "cryptography>=46.0.3",
    "fastapi>=0.120.0",
    "httpx>=0.28.1",
    "pymysql>=1.1.2",
    "pytest>=8.4.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
